# OneResearchClaw

./: .gitignore  LICENSE  README.md  README_CH.md  pyproject.toml
.cursor/agents/: reviewer.md  writer.md
.cursor/skills/archive-grounding/: SKILL.md
.cursor/skills/archive-grounding/scripts/: ground_archive.py  run.sh
.cursor/skills/audio_structuring/: SKILL.md
.cursor/skills/audio_structuring/scripts/: run.sh
.cursor/skills/document-grounding/: SKILL.md
.cursor/skills/document-grounding/scripts/: extract_simple.py  ground_document.py  lightweight_extract.py  run.sh
.cursor/skills/grounded-research-lit/: SKILL.md
.cursor/skills/grounded-research-lit/scripts/: download_opened_literature.py  prepare_opened_paper_notes.py  refine_notes_from_downloaded_pdfs.py  web_search_reader.py
.cursor/skills/grounded-review/: SKILL.md
.cursor/skills/grounded-review/external-reviewer/: INSTRUCTIONS.md  SERVER_METADATA.json  call_ext_api.py  requirements.txt  server.py
.cursor/skills/grounded-review/external-reviewer/tools/: call_ext_reviewer.json
.cursor/skills/grounded-summary/: SKILL.md
.cursor/skills/input-router/: SKILL.md
.cursor/skills/meeting-audio-grounding/: SKILL.md
.cursor/skills/meeting-audio-grounding/scripts/: prepare_bundle.py  run.sh
.cursor/skills/meeting-grounding/: SKILL.md
.cursor/skills/meeting-video-grounding/: SKILL.md
.cursor/skills/meeting-video-grounding/scripts/: prepare_bundle.py  run.sh
.cursor/skills/one-report/: SKILL.md
.cursor/skills/pptx-grounding/: SKILL.md
.cursor/skills/pptx-grounding/scripts/: ground_pptx.py  run.sh
.cursor/skills/remote-input/: SKILL.md
.cursor/skills/remote-input/scripts/: download_arxiv.py  download_video.py
.cursor/skills/report-export/: SKILL.md
.cursor/skills/report-export/scripts/: export_audio.py  export_docx.py  export_md.py  export_pdf.py  export_pptx.js  export_pptx.py  export_report.py  plan_slides.py  run.sh
.cursor/skills/skill-evolve/: README.md  SKILL.md
.cursor/skills/skill-evolve/schemas/: feedback.schema.json  gate_result.schema.json  patch_proposal.schema.json  version_manifest.schema.json
.cursor/skills/skill-evolve/scripts/: apply_patch_to_workspace.py  collect_feedback.py  normalize_feedback.py  promote_skill_version.py  propose_skill_patch.py  reject_patch_proposal.py  run_regression_gate.py
.cursor/skills/table-grounding/: SKILL.md
.cursor/skills/table-grounding/scripts/: ground_table.py  run.sh
config/: research_pipeline.env
prompts/: One-Report.txt
src/one_report/: __init__.py
src/one_report/cli/: __init__.py  prepare_models.py  system_deps.py
